--- a/css/base.css
+++ b/css/base.css
@@ -68,6 +68,17 @@ body > .container {
     }
 }
 
+#wrapper-mask {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: -1;
+}
+
+#wrapper-mask.active {
+    z-index: 1;
+}
+
 .wrapper {
     perspective: 500px;
     -webkit-perspective: 500px;
@@ -75,14 +86,6 @@ body > .container {
 
 .wrapper, .wrapper > div {
     height: 100%;
-}
-
-.wrapper > div {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    box-shadow: 0 0 40px #BDBDBD;
 }
 
 .wrapper .welcome .circle {
@@ -338,11 +341,11 @@ ul#album-ul.photo-in {
 }
 
 #touch-us {
-    height: 4rem;
-    width: 4rem;
+    height: 3rem;
+    width: 3rem;
     position: absolute;
-    right: 2rem;
-    bottom: 2rem;
+    right: 1rem;
+    bottom: 1rem;
     /*border-radius: 10px;*/
     /*border-radius: 50%;*/
     /*box-shadow: 0 0 10px black;*/
@@ -383,45 +386,6 @@ ul#album-ul.photo-in {
 #touch-us .me {
     /*background-image: url(http://7xqb7r.com1.z0.glb.clouddn.com/images/inviting/me.png);*/
     background-image: url(../images/me_white.png);
-}
-
-.kiss > #touch-us .her {
-    -webkit-animation: herKiss 0.5s ease-out;
-    animation: herKiss 0.5s ease-out;
-}
-
-.kiss > #touch-us .me {
-    -webkit-animation: meKiss 0.5s ease-out;
-    animation: meKiss 0.5s ease-out;
-}
-
-.kiss > #touch-us > div {
-    -webkit-animation: zoomIn 0.5s ease-out;
-    animation: zoomIn 0.5s ease-out;
-}
-
-@keyframes herKiss {
-    to {
-        transform: rotateZ(-10deg) translateZ(0) translateX(3px);
-    }
-}
-
-@-webkit-keyframes herKiss {
-    to {
-        -webkit-transform: rotateZ(-5deg) translateZ(0) translateX(3px);
-    }
-}
-
-@keyframes meKiss {
-    to {
-        transform: rotateZ(-10deg) translateZ(0) translateX(-3px);
-    }
-}
-
-@-webkit-keyframes meKiss {
-    to {
-        -webkit-transform: rotateZ(-10deg) translateZ(0) translateX(-3px);
-    }
 }
 
 #cover {
@@ -472,8 +436,8 @@ ul#album-ul.photo-in {
     position: absolute;
     width: 10%;
     z-index: 2;
-    margin-top: -9rem;
-    margin-left: -6rem;
+    margin-top: -6.5rem;
+    margin-left: -4.5rem;
 }
 
 #items > div {
