before time line

--- a/css/base.css
+++ b/css/base.css
@@ -593,3 +593,7 @@ ul#album-ul.photo-in {
     position: relative;
     padding: 1px;
 }
+
+.font-xk {
+    font-family: STXingkai, "MicroSoft YaHei", serif;
+}
