--- a/css/base.css
+++ b/css/base.css
@@ -89,14 +89,6 @@ body > .container {
     height: 100%;
 }
 
-.wrapper .welcome .circle {
-    width: 100%;
-    height: 50%;
-    position: relative;
-    background: url(http://7xqb7r.com1.z0.glb.clouddn.com/images/inviting/ring.png) no-repeat 2px 6px;
-    background-size: 100%;
-}
-
 .wrapper .welcome .words {
     padding: 0 2rem;
     text-align: center;
@@ -166,7 +158,9 @@ body > .container {
 .unit.second:after {
     content: '秒';
 }
-
+.wrapper .love-story {
+    overflow-y: auto;
+}
 .wrapper .love-story > div > span,
 .wrapper .love-story > div > div {
     opacity: 0;
@@ -220,28 +214,8 @@ body > .container {
     background-color: rgba(255, 255, 255, 0.3);
 }
 
-.start {
-    position: absolute;
-    width: 120px;
-    height: 120px;
-    background: url(http://7xqb7r.com1.z0.glb.clouddn.com/images/inviting/flowers.png) -402px -270px no-repeat;
-    left: 50%;
-    top: 50%;
-    margin-left: -60px;
-    margin-top: -60px;
-}
-
 .wrapper .album > div .words {
     padding: 20px;
-}
-
-.wrapper .album > div .cover {
-    width: 90%;
-    height: 80%;
-    margin: 0 auto;
-    background: url(http://7xqb7r.com1.z0.glb.clouddn.com/images/inviting/9.jpg) no-repeat center center;
-    background-size: 100%;
-    position: relative;
 }
 
 .wrapper .album ul {
@@ -424,18 +398,6 @@ ul#album-ul.photo-in {
     margin-left: -4.5rem;
 }
 
-#items > div {
-    width: 150px;
-    height: 100px;
-    background: url(http://7xqb7r.com1.z0.glb.clouddn.com/images/inviting/25.png) no-repeat;
-    background-size: 100%;
-    text-align: center;
-    line-height: 100px;
-    display: inline-block;
-    position: relative;
-    margin-bottom: 1rem;
-}
-
 #items > div:nth-child(1) {
     transform: rotateZ(-10deg) translateZ(0);
 }
@@ -485,18 +447,6 @@ ul#album-ul.photo-in {
     100% {
         -webkit-transform: scale(0);
     }
-}
-
-#music {
-    width: 50px;
-    height: 50px;
-    position: absolute;
-    right: 10px;
-    top: 10px;
-    z-index: 2;
-    border-radius: 50%;
-    background: black url(http://7xqb7r.com1.z0.glb.clouddn.com/images/inviting/us_cd.png) no-repeat center center;
-    background-size: 50%;
 }
 
 #love-movie .box {
